--- a/app/src/main/res/drawable/ic_calendar.xml
+++ b/app/src/main/res/drawable/ic_calendar.xml
@@ -8,27 +8,27 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeColor="#99FFFFFF"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M18.667,2.333V7"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeColor="#99FFFFFF"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M9.333,2.333V7"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeColor="#99FFFFFF"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M3.5,11.667H24.5"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeColor="#99FFFFFF"
       android:strokeLineCap="round"/>
 </vector>
