--- a/app/src/main/res/drawable/ic_smile.xml
+++ b/app/src/main/res/drawable/ic_smile.xml
@@ -8,27 +8,27 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeColor="#99FFFFFF"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M9.333,16.333C9.333,16.333 11.083,18.667 14,18.667C16.917,18.667 18.667,16.333 18.667,16.333"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeColor="#99FFFFFF"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M10.5,10.5H10.514"
       android:strokeLineJoin="round"
       android:strokeWidth="3"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeColor="#99FFFFFF"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M17.5,10.5H17.514"
       android:strokeLineJoin="round"
       android:strokeWidth="3"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeColor="#99FFFFFF"
       android:strokeLineCap="round"/>
 </vector>
