--- a/app/src/main/res/drawable/ic_statistics.xml
+++ b/app/src/main/res/drawable/ic_statistics.xml
@@ -8,20 +8,20 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeColor="#99FFFFFF"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M14,23.333V4.667"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeColor="#99FFFFFF"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M7,23.333V16.333"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeColor="#99FFFFFF"
       android:strokeLineCap="round"/>
 </vector>
